# api/swagger.json
@@ -13,14 +13,74 @@
   "basePath": "/",
   "tags": [
     {
+      "name": "Product",
+      "description": "Products API"
+    },
+    {
       "name": "Category",
       "description": "Category API"
+    },
+    {
+      "name": "Users",
+      "description": "Users API"
     }
   ],
   "schemes": ["http"],
   "consumes": ["application/json"],
-  "categories": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
+    "/api/register": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Register API",
+        "parameters": [
+          {
+            "name": "RegisterModel",
+            "in": "body",
+            "description": "User Registration",
+            "required": true,
+            "type": "object",
+            "schema": {
+              "$ref": "#definitions/RegisterModel"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#definitions/ServiceResponse"
+            }
+          }
+        }
+      }
+    },
+    "/api/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Login API",
+        "parameters": [
+          {
+            "name": "LoginModel",
+            "in": "body",
+            "description": "User Login API",
+            "required": true,
+            "type": "object",
+            "schema": {
+              "$ref": "#definitions/LoginModel"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#definitions/ServiceResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/category": {
       "get": {
         "tags": ["Category"],
@@ -181,6 +241,27 @@
         }
       }
     },
+    "Product": {
+      "required": ["productName", "_id", "productPrice"],
+      "properties": {
+        "_id": {
+          "type": "integer",
+          "uniqueItems": true
+        },
+        "productName": {
+          "type": "string"
+        },
+        "productDescription": {
+          "type": "string"
+        },
+        "productPrice": {
+          "type": "number"
+        },
+        "productImage": {
+          "type": "string"
+        }
+      }
+    },
     "ServiceResponse": {
       "properties": {
         "message": {
@@ -191,6 +272,31 @@
           "items": {
             "$ref": "#/definitions/Category"
           }
+        }
+      }
+    },
+    "RegisterModel": {
+      "required": ["fullName", "email", "password"],
+      "properties": {
+        "fullName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "LoginModel": {
+      "required": ["email", "password"],
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
         }
       }
     }
